2017-10-04  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/pcap.c (get_random_bytes): Remove function.
	(v6_getsourceip): Use rand() instead of get_random_bytes().

2017-09-29  Michael Wiegand <michael.wiegand@greenbone.net>

	Address documentation issues.

	* nasl/nasl_grammar.y: Add missing parameter documentation.

	* src/attack.c: Remove documentation of non-existing parameters.

	* src/ntp.c: Correct parameter name.

	* src/openvassd.c: Remove documentation of non-existing parameters.
	Add missing parameter documentation.

	* src/plugs_req.c: Replace non-existing reference with more
	appropriate Doxygen command.

2017-09-28  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/openvassd.c (check_kb_status): Call kb_lnk_reset() to close
	redis connection, to avoid the increase of connections and to reach
	the maximum.

2017-09-27  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/openvassd.c (check_kb_status): New function. Check if Redis
	Server is up and if the KB exists. If KB does not exist force a reload.
	(main_loop): Call new function.

2017-09-25  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/Doxyfile.in, doc/Doxyfile_full.in: Set EXTRACT_PRIVATE and
	EXTRACT_STATIC to YES to ensure documentation is also generated for
	items Doxygen considers 'private' or 'static'.

2017-09-25  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/network.c (openvas_connection): Remove options parameter.
	(set_ids_evasion_mode): Remove function.
	(open_stream_connection_ext, write_stream_connection4): Don't check
	for ids evasion options.

	* nasl/nasl_http.c (build_encode_URL): New function. Moved from
	www_funcs.c and removed outdated NIDS evasion techniques.
	(_http_req): Adjust build_encode_URL() calls.

	* misc/ids_send.c, misc/ids_send.h, misc/www_funcs.c, misc/www_funcs.h:
	Remove unused files.

	* misc/CMakeLists.txt: Don't build removed files.

	* COPYING: Remove entries of removed files.
