@@ -165,157 +165,6 @@ v6_is_local_ip (struct in6_addr *addr)
   return 0;
 }
 
-/**
- * @brief We send an empty UDP packet to the remote host, and read back its mac
- * @brief address.
- *
- * (we should first interrogate the kernel's arp cache - we may
- * rely on libdnet in the future to do that)
- *
- * As a bonus, this function works well as a local ping.
- */
-int
-v6_get_mac_addr (struct in6_addr *addr, char **mac)
-{
-  int soc;
-  struct sockaddr_in soca;
-  struct sockaddr_in6 soca6;
-  int bpf;
-  struct in6_addr me;
-  struct in_addr inaddr;
-  char *iface = v6_routethrough (addr, &me);
-  char filter[255];
-  char *src_host, *dst_host;
-  unsigned char *packet;
-  int len;
-  char hostname[INET6_ADDRSTRLEN];
-
-  if (IN6_IS_ADDR_V4MAPPED (addr))
-    {
-      soc = socket (AF_INET, SOCK_DGRAM, 0);
-      *mac = NULL;
-      if (soc < 0)
-        return -1;
-
-      inaddr.s_addr = me.s6_addr32[3];
-      src_host = g_strdup (inet_ntoa (inaddr));
-      inaddr.s_addr = addr->s6_addr32[3];
-      dst_host = g_strdup (inet_ntoa (inaddr));
-      snprintf (filter, sizeof (filter)-1, "ip and (src host %s and dst host %s)",
-                src_host, dst_host);
-      g_free (src_host);
-      g_free (dst_host);
-
-      bpf = bpf_open_live (iface, filter);
-      if (bpf < 0)
-        {
-          close (soc);
-          return -1;
-        }
-
-      /*
-       * We only deal with ethernet
-       */
-      if (bpf_datalink (bpf) != DLT_EN10MB)
-        {
-          bpf_close (bpf);
-          close (soc);
-          return -1;
-        }
-
-
-      soca.sin_addr.s_addr = addr->s6_addr32[3];
-      soca.sin_port = htons (9);        /* or whatever */
-      soca.sin_family = AF_INET;
-      if (sendto (soc, NULL, 0, 0, (struct sockaddr *) &soca, sizeof (soca)) !=
-          0)
-        {
-          bpf_close (bpf);
-          close (soc);
-          return -1;
-        }
-    }
-  else
-    {
-      soc = socket (AF_INET6, SOCK_DGRAM, 0);
-      *mac = NULL;
-      if (soc < 0)
-        return -1;
-      src_host =
-        g_strdup (inet_ntop (AF_INET6, &me, hostname, sizeof (hostname)));
-      dst_host =
-        g_strdup (inet_ntop (AF_INET6, addr, hostname, sizeof (hostname)));
-      snprintf (filter, sizeof (filter)-1,
-                "ip6 and (src host %s and dst host %s)", src_host, dst_host);
-      g_free (src_host);
-      g_free (dst_host);
-
-
-      bpf = bpf_open_live (iface, filter);
-      if (bpf < 0)
-        {
-          close (soc);
-          return -1;
-        }
-
-      /* We only deal with ethernet. */
-      if (bpf_datalink (bpf) != DLT_EN10MB)
-        {
-          bpf_close (bpf);
-          close (soc);
-          return -1;
-        }
-
-
-      memcpy (&soca6.sin6_addr, addr, sizeof (struct in6_addr));
-      soca6.sin6_port = htons (9);      /* or whatever */
-      soca6.sin6_family = AF_INET6;
-      if (sendto (soc, NULL, 0, 0, (struct sockaddr *) &soca6, sizeof (soca6))
-          != 0)
-        {
-          bpf_close (bpf);
-          close (soc);
-          return -1;
-        }
-    }
-
-  packet = (unsigned char *) bpf_next (bpf, &len);
-  if (packet)
-    {
-      if (len >= get_datalink_size (bpf_datalink (bpf)))
-        {
-          int i;
-          for (i = 0; i < 6; i++)
-            if (packet[i] != 0xFF)
-              break;
-
-          if (i == 6)
-            {
-              bpf_close (bpf);
-              close (soc);
-              return 1;
-            }
-
-          *mac = g_malloc0 (23);
-          snprintf (*mac, 22, "%.2x.%.2x.%.2x.%.2x.%.2x.%.2x",
-                    (unsigned char) packet[0], (unsigned char) packet[1],
-                    (unsigned char) packet[2], (unsigned char) packet[3],
-                    (unsigned char) packet[4], (unsigned char) packet[5]);
-          bpf_close (bpf);
-          close (soc);
-          return 0;
-        }
-    }
-  else
-    {
-      bpf_close (bpf);
-      close (soc);
-      return 1;
-    }
-  return 1;                     /* keep the compiler happy */
-}
-
-
 /*
  * Taken straight out of Fyodor's Nmap
  */
